Fixed little bugs in plannedsessionform.

--- a/blocks/supervised/styles.css
+++ b/blocks/supervised/styles.css
@@ -12,3 +12,7 @@
 .block_supervised .content .mform .fdescription.required {
     display: none;
 }
+
+.block_supervised .content select {
+    width: 98px;
+}
