Active session form: Save changes / Finish session.

--- a/blocks/supervised/styles.css
+++ b/blocks/supervised/styles.css
@@ -16,3 +16,7 @@
 .block_supervised .content select {
     width: 98px;
 }
+
+.block_supervised .content .mform .fitem .fgroup {
+    margin-left: 0;
+}
